--- a/mission.html
+++ b/mission.html
@@ -12,6 +12,54 @@
 
 <body class="d-flex flex-column min-vh-100">
     <!-- En-tête -->
+    <header class="shadow-sm">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand d-flex align-items-center" href="#">
+                    <img src="images/logo.jpg" alt="Logo" class="logo me-2" style="max-height:40px;">
+                    <span class="fw-bold">LTD HEALTH CLUB</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="mainNav">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a href="index.html" class="nav-link"><i
+                                    class="fas fa-home fa-sm me-1"></i><span class="fw-bold">Accueil</span></a></li>
+                        <li class="nav-item dropdown"><a href="services.html" class="nav-link dropdown-toggle"
+                                id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i
+                                    class="fas fa-hands-helping me-1"></i><span class="fw-bold">Nos Services</span></a>
+                            <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                                <li><a class="dropdown-item" href="hospitalisation.html">Hospitalisation</a></li>
+                                <li><a class="dropdown-item" href="soinsCourant.html">Soins courants</a></li>
+                                <li><a class="dropdown-item" href="dentaireOptique.html">Dentaire & Optique</a></li>
+                                <li><a class="dropdown-item" href="pediatrie.html">Pédiatrie</a></li>
+                                <li><a class="dropdown-item" href="plansPersonnalise.html">Plans personnalisés</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="about.html" class="nav-link dropdown-toggle" id="aboutDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-info-circle me-1"></i>
+                                <span class="fw-bold">À propos</span>
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                                <li><a class="dropdown-item" href="mission.html">Notre Mission</a></li>
+                                <li><a class="dropdown-item" href="valeurs.html">Nos Valeurs</a></li>
+                                <li><a class="dropdown-item" href="team.html">Notre Équipe</a></li>
+                                <li><a class="dropdown-item" href="engagement.html">Nos engagements</a></li>
+                                <li><a class="dropdown-item" href="partenaire.html">Nos Partenaires</a></li>
+
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a href="contact.html" class="nav-link"><i
+                                    class="fas fa-envelope me-1"></i><span class="fw-bold">Contactez-nous</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <!-- HERO À PROPOS -->
     <section class="hero-section text-center">
         <div class="container">
@@ -34,9 +82,9 @@
             <div class="row justify-content-center">
                 <div class="col-lg-10">
                     <!-- Section Qui sommes-nous -->
-                    <article class="card mb-5 border-0 shadow-sm">
+                    <article class="card mb-5 border-0 shadow-sm valeur-anim">
                         <div class="card-body p-4">
-                            <h2 class="h3 mb-4 text-primary"><i class="fas fa-info-circle me-2"></i>Qui sommes-nous ?
+                            <h2 class="h3 mb-4 text-orange"><i class="fas fa-info-circle me-2"></i>Qui sommes-nous ?
                             </h2>
                             <div class="row g-4 align-items-center">
                                 <div class="col-md-6">
@@ -46,139 +94,20 @@
                                     <p>Depuis plus de 2 ans, nous accompagnons nos adhérents dans la gestion de leurs
                                         dépenses de santé avec des offres claires, accessibles et personnalisées.</p>
                                     <div
-                                        class="bg-primary bg-opacity-10 border-start border-4 border-primary rounded-3 p-3 mt-4 mb-2">
-                                        <span class="fw-semibold text-primary"><i class="fas fa-bullseye me-2"></i>Notre
-                                            objectif
-                                            :</span>
+                                        class="bg-white border-start border-4 border-orange rounded-3 p-3 mt-4 mb-2 valeur-anim">
+                                        <span class="fw-semibold text-orange"><i class="fas fa-bullseye me-2"></i>Notre
+                                            objectif :</span>
                                         <span class="text-dark">protéger la santé de chacun, quel que soit son âge ou sa
-                                            situation.
-                                        </span>
+                                            situation.</span>
                                     </div>
+                                    <a href="contact.html" class="btn btn-orange mt-3 valeur-anim"><i
+                                            class="fas fa-envelope me-2"></i>Contactez-nous</a>
                                 </div>
                                 <div class="col-md-6 text-center">
                                     <img src="images/hero_4.jpg" alt="Qui sommes-nous"
-                                        class="img-fluid rounded-4 shadow-lg w-100"
+                                        class="img-fluid rounded-4 shadow-lg w-100 valeur-img-anim"
                                         style="max-height: 270px; object-fit: cover;">
                                 </div>
-                            </div>
-                        </div>
-                    </article>
-
-                    <!-- Section Valeurs -->
-                    <article class="card mb-5 border-0 shadow-sm">
-                        <div class="card-body p-4 position-relative bg-transparent">
-                            <div class="valeurs-bg-img"></div>
-                            <h2 class="h3 mb-4 text-primary position-relative z-1"><i class="fas fa-heart me-2"></i>Nos
-                                valeurs
-                            </h2>
-                            <div class="row g-4 position-relative z-1">
-                                <div class="col-md-6 col-lg-3">
-                                    <div
-                                        class="valeur-card h-100 text-center p-3 rounded-4 shadow-sm bg-white bg-opacity-75">
-                                        <div class="mb-2 text-primary"><i class="fas fa-hands-helping fa-2x"></i></div>
-                                        <h3 class="h5">Solidarité</h3>
-                                        <p class="mb-0">Nous croyons en la force du collectif pour faire face aux aléas
-                                            de la
-                                            vie.</p>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 col-lg-3">
-                                    <div
-                                        class="valeur-card h-100 text-center p-3 rounded-4 shadow-sm bg-white bg-opacity-75">
-                                        <div class="mb-2 text-primary"><i class="fas fa-map-marker-alt fa-2x"></i></div>
-                                        <h3 class="h5">Proximité</h3>
-                                        <p class="mb-0">Nous sommes à l'écoute de nos adhérents et nous nous engageons à
-                                            leur
-                                            apporter un service de qualité.</p>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 col-lg-3">
-                                    <div
-                                        class="valeur-card h-100 text-center p-3 rounded-4 shadow-sm bg-white bg-opacity-75">
-                                        <div class="mb-2 text-primary"><i class="fas fa-eye fa-2x"></i></div>
-                                        <h3 class="h5">Transparence</h3>
-                                        <p class="mb-0">Nous garantissons une information claire et accessible sur nos
-                                            offres et
-                                            services.</p>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 col-lg-3">
-                                    <div
-                                        class="valeur-card h-100 text-center p-3 rounded-4 shadow-sm bg-white bg-opacity-75">
-                                        <div class="mb-2 text-primary"><i class="fas fa-handshake fa-2x"></i></div>
-                                        <h3 class="h5">Engagement</h3>
-                                        <p class="mb-0">Nous défendons les intérêts de nos adhérents et promouvons
-                                            l'accès aux
-                                            soins pour tous.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </article>
-
-                    <!-- Section Équipe -->
-                    <article class="card mb-5 border-0 shadow-sm">
-                        <div class="card-body p-4">
-                            <h2 class="h3 mb-4 text-primary"><i class="fas fa-users me-2"></i>Notre équipe</h2>
-                            <div class="row align-items-center">
-                                <div class="col-md-8">
-                                    <p>Notre équipe est composée de professionnels de la santé et de la protection
-                                        sociale, passionnés par leur métier et engagés à vos côtés.</p>
-                                    <p>Nous mettons à votre disposition notre expertise pour vous accompagner dans vos
-                                        choix de santé et vous aider à mieux comprendre vos droits et vos garanties.</p>
-                                </div>
-                                <div class="col-md-4 text-center">
-                                    <img src="images/Teamwork.jpg" alt="Travail d'équipe"
-                                        class="img-fluid rounded shadow" style="max-height: 220px;">
-                                </div>
-                            </div>
-                        </div>
-                    </article>
-
-                    <!-- Section Engagements -->
-                    <article class="card border-0 shadow-sm">
-                        <div class="card-body p-4 position-relative">
-                            <div class="engagements-bg-img"></div>
-                            <h2 class="h3 mb-4 text-primary position-relative z-1"><i
-                                    class="fas fa-hand-holding-heart me-2"></i>Nos engagements</h2>
-                            <div class="row g-3 position-relative z-1">
-                                <div class="col-md-6">
-                                    <div class="bg-light p-3 rounded h-100">
-                                        <ul class="list-unstyled">
-                                            <li class="mb-2"><i
-                                                    class="fas fa-check-circle text-primary me-2"></i>Garanties adaptées
-                                                à vos besoins</li>
-                                            <li class="mb-2"><i
-                                                    class="fas fa-check-circle text-primary me-2"></i>Remboursement
-                                                rapide et efficace</li>
-                                            <li><i class="fas fa-check-circle text-primary me-2"></i>Accompagnement
-                                                personnalisé</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="bg-light p-3 rounded h-100 mb-3 mb-md-0">
-                                        <ul class="list-unstyled">
-                                            <li class="mb-2"><i class="fas fa-check-circle text-primary me-2"
-                                                    aria-hidden="true"></i>Promotion de la
-                                                prévention</li>
-                                            <li class="mb-2"><i
-                                                    class="fas fa-check-circle text-primary me-2"></i>Partenariats
-                                                qualité</li>
-                                            <li><i class="fas fa-check-circle text-primary me-2"></i>Accès à la santé
-                                                pour tous</li>
-                                        </ul>
-                                    </div>
-                                    <img src="images/hero_6.jpg" alt="Nos engagements"
-                                        class="img-fluid rounded-4 shadow w-100 mt-3"
-                                        style="max-height: 160px; object-fit: cover;">
-                                </div>
-                            </div>
-                            <div class="mt-4 text-center position-relative z-1">
-                                <p class="lead">Nous sommes convaincus que la santé est un droit fondamental</p>
-                                <a href="contact.html" class="btn btn-primary px-4 py-2">
-                                    <i class="fas fa-user-plus me-2"></i>Rejoignez-nous
-                                </a>
                             </div>
                         </div>
                     </article>
